# spot-perceptio

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.test  LICENSE  Makefile  README.md  pyproject.toml  spot-perceptio.code-workspace
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yml  test.yml
examples/home-assistant/: camera_image_analyzer.yaml
src/app/rest/: base.py  bootstrap.py  main.py
src/di/container/: __init__.py  contract.py
src/di/container/dishka/: container.py  proxy.py
src/di/container/dishka/providers/: kernel_provider.py  parking_provider.py  provider.py  shared_provider.py
src/kernel/application/config/: __init__.py  app.py
src/kernel/application/system/dto/: echo.py  health.py  health_status.py
src/kernel/application/system/handler/check_health/: __init__.py  handler.py  query.py
src/kernel/application/system/handler/echo/: __init__.py  command.py  handler.py  query.py
src/kernel/domain/config/: __init__.py  app.py
src/kernel/ui/rest/base/: request.py  response.py
src/kernel/ui/rest/handler/: base.py  exception.py
src/kernel/ui/rest/system/: router.py
src/kernel/ui/rest/system/action/: echo.py  health.py
src/kernel/ui/rest/system/request/: echo.py
src/parking/application/config/: __init__.py  ml.py
src/parking/application/dto/contract/: __init__.py  coordinate.py  plate.py  spot.py  vehicle.py
src/parking/application/factory/: contract.py  contract_income.py
src/parking/application/handler/analyze_spot/: __init__.py  command.py  handler.py
src/parking/domain/aggregate/: spot.py  vehicle.py
src/parking/domain/enum/: color.py  vehicle.py
src/parking/domain/provider/plate/: identifier.py
src/parking/domain/provider/vehicle/: identifier.py
src/parking/domain/service/spot/: analyzer.py
src/parking/domain/service/vehicle/: recognizer.py
src/parking/domain/vo/: plate.py
src/parking/infrastructure/factory/plate/: identifier.py
src/parking/infrastructure/factory/vehicle/: identifier.py
src/parking/infrastructure/provider/plate/: cache_identifier.py  hyperlpr_identifier.py  identifier.py  ml_detection_identifier.py  yolo_identifier.py
src/parking/infrastructure/provider/vehicle/: cache_identifier.py  identifier.py  ml_detection_identifier.py  yolo_identifier.py
src/parking/ui/rest/: router.py
src/parking/ui/rest/action/: analyze_spot.py
src/parking/ui/rest/mapper/: contract_response.py  request_command.py  request_income.py
src/parking/ui/rest/request/: analyze_spot.py  coordinate.py  image.py  spot.py
src/parking/ui/rest/response/: analyze_spot.py  coordinate.py  plate.py  spot.py  vehicle.py
src/shared/application/config/: __init__.py  ml.py
src/shared/application/dto/: base.py
src/shared/application/factory/: image.py
src/shared/application/factory/tool/: worker_pool.py
src/shared/application/handler/base/: query.py
src/shared/application/http/client/: __init__.py  exception.py  protocol.py
src/shared/application/service/llm/: provider.py
src/shared/application/tool/: image_cache.py  image_similarity.py  worker_pool.py
src/shared/domain/aggregate/: base.py  image.py  spot.py
src/shared/domain/config/: __init__.py  ml.py
src/shared/domain/enum/: country.py
src/shared/domain/exception/: base.py
src/shared/domain/factory/: dt.py
src/shared/domain/vo/: base.py  coordinate.py  data.py
src/shared/infrastructure/dto/vo/: data.py
src/shared/infrastructure/factory/: dt.py  image.py
src/shared/infrastructure/factory/tool/: worker_pool.py
src/shared/infrastructure/http/client/: httpx_protocol.py
src/shared/infrastructure/service/llm/: provider.py
src/shared/infrastructure/tool/: noop_worker_pool.py  worker_pool.py
src/shared/infrastructure/tool/image_cache/: similarity_image_cache.py
src/shared/infrastructure/tool/image_similarity/: dhash_similarity.py  hash_similarity.py  image_similarity.py  phash_similarity.py
tests/models/: README.md  test_parking_spot_api.py  test_parking_spot_crop.py  test_parking_spot_crop.txt  test_parking_spot_no_crop.py  test_parking_spot_no_crop.txt
tests/unit/: README.md
tests/unit/parking/domain/service/: test_spot_analyzer.py  test_vehicle_recognizer.py
tools/: polygon_annotator.html  rotatedbbox_annotator.html
(+25 files in other folders)
