[project]
name = "spot-perceptio"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi (>=0.119)",
    "uvicorn (>=0.37)",
    "ultralytics (>=8.3)",
    "opencv-python (>=4.12)",
    "opencv-contrib-python (>=4.12)",
    "openai (>=2.3.0)",
    "dishka (>=1.7)",
    "pydantic-settings (>=2.12)"
]

[dependency-groups]
dev = [
    "debugpy (>=1.8)",
    "pylint (>=4.0.0)",
    "pylint-pydantic (>=0.4)",
    "pytest (>=8.4)",
    "pytest-asyncio (>=1.2)",
    "pytest-cov (>=7.0.0)",
    "faker (>=37.12.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "pydantic[mypy] (>=2.12.4,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.mypy]
plugins = [
    "pydantic.mypy"
]
mypy_path = [
    "src"
]
explicit_package_bases = true
warn_unused_configs = true
show_error_codes = true
pretty = true
strict = true

[tool.pylint.main]
max-line-length = 100
ignore-paths = ["migrations/", "__pycache__/"]
load-plugins = [
    "pylint.extensions.docparams",
    "pylint.extensions.typing",
    "pylint.extensions.code_style",
    "pylint_pydantic"
]

[tool.pylint.messages_control]
disable = [
    "missing-docstring",
    "unused-argument",
    "too-few-public-methods",
    "consider-using-assignment-expr",
]

[tool.pylint.design]
max-locals = 25
max-args = 8
max-attributes = 10

[tool.pylint.format]
indent-string = "    "

[tool.pylint.typecheck]
generated-members = ["cv2.*"]
ignored-modules = [
]

[tool.pylint.typing]
runtime-typing = true

[tool.pylint.basic]
good-names = [
    "id", "x", "y", "z", "db", "vo", "lp", "cv", "dt", "np", "df", "i", "j", "k"
]

[tool.pylint.classes]
check-protected-access-in-special-methods = true
valid-classmethod-first-arg = ["cls"]
valid-metaclass-classmethod-first-arg = ["mcs"]

[tool.pylint.similarities]
min-similarity-lines = 8
ignore-comments = true
ignore-docstrings = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-v"
]
markers = [
    "unit: Unit tests"
]
asyncio_mode = "auto"
